[package]
edition = "2018"
name = "fibers"
version = "0.1.13"
authors = ["Takeru Ohta <takeru_ohta@dwango.co.jp>"]
description = "A Rust library to execute a number of lightweight asynchronous tasks (a.k.a, fibers) based on futures and mio"
homepage = "https://github.com/dwango/fibers-rs"
repository = "https://github.com/dwango/fibers-rs"
readme = "README.md"
keywords = ["async", "thread", "fiber", "futures"]
license = "MIT"

[badges]
travis-ci = {repository = "dwango/fibers-rs"}

[dependencies]
mio = "0.6"
futures = "0.1"
futures03 = {package = "futures", version = "0.3", features = ["thread-pool", "compat"]}
tokio = {version = "0.3", features = ["time", "rt", "rt-multi-thread", "net", "stream", "io-util"]}
splay_tree = "0.2"
num_cpus = "1"
nbchan = "0.1"
pin-project = "1.0.1"

[dev-dependencies]
clap = "2"
handy_async = "0.2"
httparse = "1"
